--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
 	var socket = io.connect('http://localhost:9000');
 
 	socket.on('connect', function (data) {
-		console.log(data);
-		socket.emit('times', { 
-			ofInitialTime: ofInitialTime,
-			ofAfterLoaded: ofAfterLoaded 
+
+		fin.desktop.System.getConfig(function(sysInfo){
+			socket.emit('times', { 
+				ofInitialTime: ofInitialTime,
+				ofAfterLoaded: ofAfterLoaded,
+				runtimeVersion: fin.desktop.getVersion(),
+				sysInfo: sysInfo 
+			});
 		});
+
 	});
 
 	socket.on('shutdown', function(){
-		fin.desktop.Window.getCurrent().close(true);
+		fin.desktop.Application.getCurrent().close(true);
 	});
 
 	</script>
